--- a/about.html
+++ b/about.html
@@ -202,7 +202,7 @@ I grew up and settled in Seri Manjung, Perak.
         </div>
         <!-- Image Content -->
         <div class="about-image">
-            <img src="C:\Users\Lenovo\Downloads\photo1.jpg" alt="About Me Image">
+            <img src="C:\Users\Lenovo\Downloads\IMD318\photo1.jpg" alt="About Me Image">
         </div>
     </div>
 
@@ -211,21 +211,16 @@ I grew up and settled in Seri Manjung, Perak.
         <!-- Back Arrow -->
         <a href="index.html">
             <i class="fas fa-arrow-left"></i> <!-- Left Arrow -->
-        </a>
-        <!-- Next Arrow -->
-        <a href="more.html">
-            <i class="fas fa-arrow-right"></i> <!-- Right Arrow -->
-        </a>
     </div>
 
 <!-- Music Control Button -->
     <button class="music-btn" id="musicButton">
-        <i class="fas fa-volume-up"></i> 
+        <i class="fas fa-volume-up"></i> <!-- Volume Icon -->
     </button>
 
     <!-- Background Music -->
-    <audio id="backgroundMusic" controls autoplay loop>
-        <source src="C:\Users\Lenovo\Downloads\d1.m4a" type="audio/mpeg">
+    <audio id="backgroundMusic"controls autoplay loop>
+        <source src="C:\Users\Lenovo\Downloads\IMD318\d1.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
