--- a/contact.html
+++ b/contact.html
@@ -236,14 +236,11 @@
         </div>
     </div>
 
-    <!-- Music Control Button -->
-    <button class="music-btn" id="musicButton">
-        <i class="fas fa-volume-up"></i> 
     </button>
 
     <!-- Background Music -->
     <audio id="backgroundMusic" controls autoplay loop>
-        <source src="C:\Users\Lenovo\Downloads\d1.m4a" type="audio/mpeg">
+        <source src="C:\Users\Lenovo\Downloads\IMD318\d1.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
