--- a/education.html
+++ b/education.html
@@ -205,7 +205,7 @@
         <div class="education-frame">
             <!-- Secondary School -->
             <div class="frame">
-                <img src="C:\Users\Lenovo\Downloads\l1.jpg" 
+                <img src="C:\Users\Lenovo\Downloads\IMD318\l1.jpg" 
 alt="Secondary School (2017–2021)">
                 <h3>SMK Seri Manjung (SMKSM) </h3>
                 <p>
@@ -216,7 +216,7 @@ alt="Secondary School (2017–2021)">
             </div>
             <!-- University -->
             <div class="frame">
-                <img src="C:\Users\Lenovo\Downloads\l2.jpg">
+                <img src="C:\Users\Lenovo\Downloads\IMD318\l2.jpg">
                 <h3>Universiti Teknologi MARA (UiTM), Sungai Petani </h3>
                 <p>
                 <h2>Diploma in Information Management </h2>
@@ -234,27 +234,16 @@ alt="Secondary School (2017–2021)">
         <a href="more.html">
             <i class="fas fa-arrow-left"></i> <!-- Left Arrow -->
         </a>
-        <!-- Next Arrow -->
-        <a href="experience.html">
-            <i class="fas fa-arrow-right"></i> <!-- Right Arrow -->
-        </a>
     </div>
 
-<!-- Music Control Button -->
-    <button class="music-btn" id="musicButton">
-        <i class="fas fa-volume-up"></i> 
-    </button>
 
     <!-- Background Music -->
-    <audio id="backgroundMusic" controls autoplay loop>
-        <source src="C:\Users\Lenovo\Downloads\d1.m4a" type="audio/mpeg">
+    <audio id="backgroundMusic"controls autoplay loop>
+        <source src="C:\Users\Lenovo\Downloads\IMD318\d1.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
     <script>
-        // Mute Button functionality
-        const musicButton = document.getElementById('musicButton');
-        const backgroundMusic = document.getElementById('backgroundMusic');
 
         musicButton.addEventListener('click', function() {
             if (backgroundMusic.muted) {
