--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,14 @@
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #D5F6FB, #FFD4A9); /* Gradient Background */
+            background: linear-gradient(to right, #D5F6FB, #FFD4A9); 
             color: #333;
             overflow-x: hidden;
             animation: fadeIn 2s forwards;
         }
 
         .navbar {
-            background: rgba(174, 198, 207, 0.8); /* Transparent Navbar */
+            background: rgba(174, 198, 207, 0.8); 
             padding: 15px;
             position: sticky;
             top: 0;
