--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </button>
 
     <audio id="backgroundMusic"controls autoplay loop>
-        <source src="https://raw.githubusercontent.com/NurulLiyana23/IMD318_NURUL_LIYANA_BINTI_MAZLAN_2022871904/main/assets/audio/d1.m4a" type="audio/mpeg">
+        <audio src="assets/audio/d1.m4a" autoplay loop controls></audio>
         Your browser does not support the audio element.
     </audio>
 
