--- a/gallery.html
+++ b/gallery.html
@@ -233,13 +233,19 @@
             <div class="section-title">Friends Pictures</div>
             <div class="gallery-frame">
                 <div class="frame">
-                    <img src="C:\Users\Lenovo\Downloads\IMD318\e1.jpg" alt="Friends Picture 1">
+                    <img src="IMD318_NURUL_LIYANA_BINTI_MAZLAN_2022871904/IMD318
+/e1.jpg
+" alt="Friends Picture 1">
                 </div>
                 <div class="frame">
-                    <img src="C:\Users\Lenovo\Downloads\IMD318\e2.jpg" alt="Friends Picture 2">
+                    <img src="IMD318_NURUL_LIYANA_BINTI_MAZLAN_2022871904/IMD318
+/e2.jpg
+" alt="Friends Picture 2">
                 </div>
                 <div class="frame">
-                    <img src="C:\Users\Lenovo\Downloads\IMD318\e3.jpg" alt="Friends Picture 3">
+                    <img src="IMD318_NURUL_LIYANA_BINTI_MAZLAN_2022871904/IMD318
+/e3.jpg
+" alt="Friends Picture 3">
                 </div>
             </div>
         </div>
