--- a/gallery.html
+++ b/gallery.html
@@ -233,7 +233,9 @@
             <div class="section-title">Friends Pictures</div>
             <div class="gallery-frame">
                 <div class="frame">
-                    <img src="IMD318_NURUL_LIYANA_BINTI_MAZLAN_2022871904/IMD318
+                    <img src="assets/images/e1.jpg" alt="Friends Pictures">
+<img src="https://raw.githubusercontent.com/NurulLiyana23/IMD318_NURUL_LIYANA_BINTI_MAZLAN_2022871904/IMD318/main/assets/images/e1.png" alt="Raw URL Image">
+<img src="IMD318_NURUL_LIYANA_BINTI_MAZLAN_2022871904/IMD318
 /e1.jpg
 " alt="Friends Picture 1">
                 </div>
