--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
     </div>
 
     <div class="about-content">
-        <!-- Text Content -->
+
         <div class="about-text">
             <h1>About Me</h1>
             <h2>Who I Am</h2>
@@ -193,7 +193,7 @@ I grew up and settled in Seri Manjung, Perak.
         </div>
 
         <div class="about-image">
-            <img src="C:\Users\Lenovo\Downloads\IMD318\photo1.jpg" alt="About Me Image">
+            <img src"photo1.jpg" alt="about me" class="image">
         </div>
     </div>
 
@@ -208,7 +208,7 @@ I grew up and settled in Seri Manjung, Perak.
     </button>
 
     <audio id="backgroundMusic"controls autoplay loop>
-        <source src="C:\Users\Lenovo\Downloads\IMD318\d1.m4a" type="audio/mpeg">
+        <source src="d1.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
