--- a/about.html
+++ b/about.html
@@ -4,25 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600&family=Great+Vibes&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <!-- Styles -->
+
     <style>
 
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #FDF4BB, #FBD2D8); /* Gradient Background */
+            background: linear-gradient(to right, #FDF4BB, #FBD2D8);
             color: #333;
             overflow-x: hidden;
             animation: fadeIn 2s forwards;
         }
 
         .navbar {
-            background: rgba(174, 198, 207, 0.8); /* Transparent Navbar */
+            background: rgba(174, 198, 207, 0.8);
             padding: 15px;
             position: sticky;
             top: 0;
@@ -193,22 +191,22 @@ I grew up and settled in Seri Manjung, Perak.
         </div>
 
         <div class="about-image">
-            <img src"photo1.jpg" alt="about me" class="image">
+            <img src="C:IMD318\photo1.jpg" alt="About Me Image">
         </div>
     </div>
 
     <div class="arrow-buttons">
         <!-- Back Arrow -->
         <a href="index.html">
-            <i class="fas fa-arrow-left"></i> <!-- Left Arrow -->
+            <i class="fas fa-arrow-left"></i>
     </div>
 
     <button class="music-btn" id="musicButton">
-        <i class="fas fa-volume-up"></i> <!-- Volume Icon -->
+        <i class="fas fa-volume-up"></i>
     </button>
 
     <audio id="backgroundMusic"controls autoplay loop>
-        <source src="d1.m4a" type="audio/mpeg">
+        <source src="IMD318\d1.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
