--- a/more.html
+++ b/more.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>More</title>
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <style>
 
         body {
             font-family: 'Poppins', sans-serif;
@@ -73,10 +70,11 @@
             object-fit: contain; /* Ensure the content fits within the container without cropping */
             border-radius: 15px;
             display: block;
-            margin: 0 auto; /* Center the content */        }
+            margin: 0 auto;
+        }
 
         .gallery-item video {
-            background: #000; /* Video placeholder background */
+            background: #000; 
         }
 
         .more-text {
@@ -178,15 +176,15 @@
         <div class="gallery">
             <!-- Video Item -->
             <div class="gallery-item">
-                <video src="C:/Users/Lenovo/Downloads/IMD318/v1.mp4" autoplay muted loop playsinline controls></video>
+                <video src="IMD318/v1.mp4" autoplay muted loop playsinline controls></video>
             </div>
 
             <div class="gallery-item">
-                <img src="C:/Users/Lenovo/Downloads/IMD318/s2.jpg" alt="Photo 1">
+                <img src="IMD318/s2.jpg" alt="Photo 1">
             </div>
 
             <div class="gallery-item">
-                <img src="C:/Users/Lenovo/Downloads/IMD318/s1.jpg" alt="Photo 2">
+                <img src="IMD318/s1.jpg" alt="Photo 2">
             </div>
         </div>
     </section>
@@ -204,12 +202,12 @@
     <div class="arrow-buttons">
         <!-- Back Arrow -->
         <a href="about.html">
-            <i class="fas fa-arrow-left"></i> <!-- Left Arrow -->
+            <i class="fas fa-arrow-left"></i>
          </a>
     </div>
 
     <audio id="backgroundMusic"controls autoplay loop>
-        <source src="C:\Users\Lenovo\Downloads\IMD318\d1.m4a" type="audio/mpeg">
+        <source src="IMD318\d1.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
