--- a/education.html
+++ b/education.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600&family=Great+Vibes&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <!-- Styles -->
+
     <style>
 
         body {
@@ -195,9 +193,9 @@
             <h2>Learning & Growth</h2>
         </div>
         <div class="education-frame">
-            <!-- Secondary School -->
+
             <div class="frame">
-                <img src="C:\Users\Lenovo\Downloads\IMD318\l1.jpg" 
+                <img src="IMD318\l1.jpg" 
                 alt="Secondary School (2017–2021)">
                 <h3>SMK Seri Manjung (SMKSM) </h3>
                 <p>
@@ -206,9 +204,9 @@
                     (2017-2021)
                 </p>
             </div>
-            <!-- University -->
+
             <div class="frame">
-                <img src="C:\Users\Lenovo\Downloads\IMD318\l2.jpg">
+                <img src="IMD318\l2.jpg">
                 <h3>Universiti Teknologi MARA (UiTM), Sungai Petani </h3>
                 <p>
                 <h2>Diploma in Information Management </h2>
@@ -223,13 +221,13 @@
     <div class="arrow-buttons">
         <!-- Back Arrow -->
         <a href="more.html">
-            <i class="fas fa-arrow-left"></i> <!-- Left Arrow -->
+            <i class="fas fa-arrow-left"></i>
         </a>
     </div>
 
 
     <audio id="backgroundMusic"controls autoplay loop>
-        <source src="C:\Users\Lenovo\Downloads\IMD318\d1.m4a" type="audio/mpeg">
+        <source src="IMD318\d1.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
