--- a/experience.html
+++ b/experience.html
@@ -4,25 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experience</title>
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600&family=Great+Vibes&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <!-- Styles -->
+
     <style>
 
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #FFD0FC, #98F6F5); /* Gradient Background */
+            background: linear-gradient(to right, #FFD0FC, #98F6F5);
             color: #333;
             overflow-x: hidden;
             animation: fadeIn 2s forwards;
         }
 
         .navbar {
-            background: rgba(174, 198, 207, 0.8); /* Transparent Navbar */
+            background: rgba(174, 198, 207, 0.8);
             padding: 15px;
             position: sticky;
             top: 0;
@@ -201,19 +199,19 @@
             <h2>What I've Done</h2>
             </div>
             <div class="experience-frame">
-            <!-- Job 1 -->
+
             <div class="frame">
                 <h3>Part-Time Dropship </h3>
                 <h2>(Instagram)</h2>
                 <p>Handled posting on social media and managed communication with online customers.</p>
             </div>
-            <!-- Internship -->
+
             <div class="frame">
                 <h3>Part-Time Cashier at Selera Wan Zahrah </h3>
                 <h2>(April 2023 – May 2023)</h2>
                 <p>Responsible for managing transactions and operating the GrabFood and Foodpanda systems.</p>
             </div>
-            <!-- Personal Project -->
+
             <div class="frame">
                 <h3>Little House Child Care </h3>
                 <h2>(June 2023 – September 2023)</h2>
@@ -225,12 +223,12 @@
     <div class="arrow-buttons">
         <!-- Back Arrow -->
         <a href="education.html">
-            <i class="fas fa-arrow-left"></i> <!-- Left Arrow -->
+            <i class="fas fa-arrow-left"></i>
         </a>
     </div>
 
     <audio id="backgroundMusic"controls autoplay loop>
-        <source src="C:\Users\Lenovo\Downloads\IMD318\d1.m4a" type="audio/mpeg">
+        <source src="IMD318\d1.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
