--- a/skills.html
+++ b/skills.html
@@ -1,29 +1,26 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skills</title>
-    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600&family=Great+Vibes&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <!-- Styles -->
+
     <style>
 
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #98F6F5, #A1AEE2); /* Gradient Background */
+            background: linear-gradient(to right, #98F6F5, #A1AEE2); 
             color: #333;
             overflow-x: hidden;
             animation: fadeIn 2s forwards;
         }
 
         .navbar {
-            background: rgba(174, 198, 207, 0.8); /* Transparent Navbar */
+            background: rgba(174, 198, 207, 0.8); 
             padding: 15px;
             position: sticky;
             top: 0;
@@ -85,8 +82,8 @@
             width: 100%;
             gap: 30px;
             margin-top: 30px;
-            transform: scale(0); /* Start from small scale */
-            animation: morphIn 2s ease-in-out forwards; /* Morph effect */
+            transform: scale(0); 
+            animation: morphIn 2s ease-in-out forwards; 
         }
 
         .frame {
@@ -159,7 +156,7 @@
         }
 
         .arrow-buttons a:hover {
-            color: #FF6F61; /* Coral on hover */
+            color: #FF6F61; 
             transform: scale(1.1);
         }
 
@@ -183,7 +180,6 @@
             100% { transform: translateY(0); opacity: 1; }
         }
 
-        /* Morph Transition Effect */
         @keyframes morphIn {
             0% { transform: scale(0); }
             100% { transform: scale(1); }
@@ -210,19 +206,19 @@
         <div class="skills-frame">
 
             <div class="frame">
-                <img src="C:\Users\Lenovo\Downloads\IMD318\iii1.jpg" alt="Microsoft Word Icon">
+                <img src="IMD318\iii1.jpg" alt="Microsoft Word Icon">
                 <h3>Microsoft Word</h3>
                 <p>Proficient in creating professional documents, reports, and proposals using advanced formatting tools in Microsoft Word.</p>
             </div>
 
             <div class="frame">
-                <img src="C:\Users\Lenovo\Downloads\IMD318\iii2.jpg" alt="Microsoft Excel Icon">
+                <img src="IMD318\iii2.jpg" alt="Microsoft Excel Icon">
                 <h3>Microsoft Excel</h3>
                 <p>Skilled in data analysis, using formulas, pivot tables, and creating reports in Microsoft Excel for business insights.</p>
             </div>
 
             <div class="frame">
-                <img src="C:\Users\Lenovo\Downloads\IMD318\iii3.jpg" alt="Microsoft PowerPoint Icon">
+                <img src="IMD318\iii3.jpg" alt="Microsoft PowerPoint Icon">
                 <h3>Microsoft PowerPoint</h3>
                 <p>Experienced in creating visually appealing presentations with animations, transitions, and multimedia integration.</p>
             </div>
@@ -231,19 +227,19 @@
         <div class="skills-frame">
 
             <div class="frame">
-                <img src="C:\Users\Lenovo\Downloads\IMD318\iii4.jpg" alt="Social Media Literacy Icon">
+                <img src="IMD318\iii4.jpg" alt="Social Media Literacy Icon">
                 <h3>Social Media Literacy</h3>
                 <p>Proficient in managing social media platforms and engaging audiences effectively across various channels.</p>
             </div>
 
             <div class="frame">
-                <img src="C:\Users\Lenovo\Downloads\IMD318\iii5.jpg" alt="Photo Editing Icon">
+                <img src="IMD318\iii5.jpg" alt="Photo Editing Icon">
                 <h3>Photo Editing</h3>
                 <p>Experienced with tools to enhance and manipulate images for personal and professional use.</p>
             </div>
 
             <div class="frame">
-                <img src="C:\Users\Lenovo\Downloads\IMD318\iii6.jpg" alt="Video Editing Icon">
+                <img src="IMD318\iii6.jpg" alt="Video Editing Icon">
                 <h3>Video Editing</h3>
                 <p>Skilled in editing videos for social media and other platforms, using various software.</p>
             </div>
@@ -253,12 +249,12 @@
     <div class="arrow-buttons">
         <!-- Back Arrow -->
         <a href="experience.html">
-            <i class="fas fa-arrow-left"></i> <!-- Left Arrow -->
+            <i class="fas fa-arrow-left"></i> 
         </a>
     </div>
 
     <audio id="backgroundMusic"controls autoplay loop>
-        <source src="C:\Users\Lenovo\Downloads\IMD318\d1.m4a" type="audio/mpeg">
+        <source src="IMD318\d1.m4a" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
